--- a/test/_includes/foo.html
+++ b/test/_includes/foo.html
@@ -1,1 +1,1 @@
-Testing Include {{ include.some_var }}
+Testing Include {{ include.some_var }}{% if include.another_var == 'awesome' %} - another var!{% endif %}
